// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the AccentButton component and width is not provided in the props when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  width: auto;
  padding: 0 1.25rem;
  border: none;
  border-radius: 1.25rem;
  font-size: 1rem;
  color: #fff;
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.c0:hover {
  background-color: #5c8ddb;
  color: #fff;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given the AccentButton component and width is provided in the props when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  width: 50px;
  padding: 0 1.25rem;
  border: none;
  border-radius: 1.25rem;
  font-size: 1rem;
  color: #fff;
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.c0:hover {
  background-color: #5c8ddb;
  color: #fff;
}

<button
    class="c0"
    width="50"
  />
</DocumentFragment>
`;

exports[`Given the Button component and width is not provided in the props when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  width: auto;
  border: none;
  border-radius: 1.25rem;
  font-size: 1rem;
  font-weight: 400;
  cursor: pointer;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given the Button component and width is provided in the props when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  width: 50px;
  border: none;
  border-radius: 1.25rem;
  font-size: 1rem;
  font-weight: 400;
  cursor: pointer;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

<button
    class="c0"
    width="50"
  />
</DocumentFragment>
`;

exports[`Given the ConnectionStatus component when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #c75a5a;
  font-weight: 500;
}

.c0:before {
  content: '';
  display: block;
  width: 12px;
  height: 12px;
  background-color: currentColor;
  border-radius: 50%;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given the Container component when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  width: 80vw;
  max-width: 100%;
  margin: 0 auto;
  box-sizing: border-box;
}

<div
    class="c0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Given the FullBackgroundContainer component when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  background-image: url();
  background-repeat: no-repeat;
  background-position: top center;
  background-size: cover;
}

<div
    class="c0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Given the InvisibleButton component when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0;
  background-color: transparent;
  border: none;
  outline: none;
  cursor: pointer;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given the LoadingSpinner component when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="loadingSpinner"
  >
    <svg>
      <circle
        cx="20"
        cy="20"
        r="20"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Given the Panel component when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 4px;
  background-color: #201d2a;
  border-radius: 6px;
  box-sizing: border-box;
}

@media screen and (max-width:700px) {
  .c0 {
    border-radius: 0;
    padding: 0;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;
